<resources>
    <string name="app_name">Delhi Tour</string>
    <string name="Image_1">TODO</string>
    <string name="image_2">TODO</string>
    <string name="image_3">TODO</string>
    <string name="image_4">TODO</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="forget_password"><i>FORGET PASSWORD</i></string>
    <string name="sign_up"><i>SIGN UP</i></string>
    <string name="title_activity_main_page">MAIN_ACTIVITY_PAGE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_activiy1">MAIN_ACTIVIY_1</string>
</resources>