<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/img_4"
    tools:context=".START_PAGE">

    <ImageView
        android:layout_width="386dp"
        android:layout_height="83dp"
        android:contentDescription="@string/Image_1"
        android:src="@drawable/img_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <ImageView
        android:layout_width="362dp"
        android:layout_height="302dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/image_2"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <ImageView
        android:layout_width="365dp"
        android:layout_height="73dp"
        android:layout_margin="20dp"
        android:background="#edf2f4"
        android:contentDescription="@string/image_3"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

    <ImageView
        android:id="@+id/start_Exploring_txt"
        android:layout_width="282dp"
        android:layout_height="61dp"
        android:layout_margin="20dp"
        android:clickable="true"
        android:contentDescription="@string/image_4"
        android:focusable="true"
        android:src="@drawable/img_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#ffffff"
        app:hintTextColor="#ffffff"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email_Address_edittxt"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints=""
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.809"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:boxStrokeColor="#ffffff"
        app:hintTextColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password_edittxt"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:shadowColor="#ffffff"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:minHeight="48dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textStyle="bold"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Forget_Password_txt"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="#ffffff"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Sign_Up_txt"
        android:layout_width="65dp"
        android:clickable="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_height="25dp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>